# nlp_template

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  docker-compose.yml  env.sample  pyproject.toml  tox.ini
.github/workflows/: test_docker.yml
config/constract_llm/dataset/cleanse/: config.json
config/constract_llm/dataset/preprocess/: config.json
config/constract_llm/dataset/split/: config.json
config/constract_llm/model/init_model/: config.json
config/constract_llm/tokenizer/add_tokens/config/: config.json  normal_tokens.json  special_tokens.json
config/constract_llm/tokenizer/merge_spm/: config.json
config/constract_llm/tokenizer/train_tokenizer/: config.json
config/constract_llm/train/ds_config/: ds_zero2.json  ds_zero2_cpu_offload.json  ds_zero2_tp.json  ds_zero3.json  ds_zero3_cpu_offload.json
docker/cpu/: Dockerfile  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
docker/gpu/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: helloworld.ipynb
scripts/: README.md  README_JA.md  main.py
scripts/constract_llm/: README.md  README_JA.md
scripts/constract_llm/dataset/: README.md  README_JA.md
scripts/constract_llm/dataset/cleanse/: README.md  README_JA.md  cleanse.py
scripts/constract_llm/dataset/hard_negative_mine/: example_retrieval.json  hard_negative_mine.py
scripts/constract_llm/dataset/preprocess/: README.md  README_JA.md  preprocess.py
scripts/constract_llm/dataset/split/: README.md  README_JA.md  split.py
scripts/constract_llm/model/: README.md  README_JA.md  init_model.py
scripts/constract_llm/tokenizer/: README.md  README_JA.md  add_tokens.py  merge_spm.py  train_tokenizer.py
src/nlp/: main.py
src/nlp/common/: regex.py
src/nlp/common/utils/: cli_utils.py  regex_utils.py
src/nlp/common/utils/file/: config.py  factory.py  io.py
src/nlp/constract_llm/dataset/: loader.py
src/nlp/constract_llm/dataset/cleanse/: cleaner.py  cleanse.py  di.py  duplicates.py  rules.py  sample.py  text.py
src/nlp/constract_llm/dataset/preprocess/: preprocess.py
src/nlp/constract_llm/dataset/split/: di.py  split.py  strategy.py
src/nlp/constract_llm/model/: di.py  factories.py  hard_negative_miner.py  hardnegative_miner.py  init_model.py  model_factory.py
src/nlp/constract_llm/model/embedder/model/: base.py  bm25.py  bm25_s.py  tfidf.py
src/nlp/constract_llm/model/tokenizer/: base.py  mecab.py  stopword.py  stopwords_data.py  sudachi.py
src/nlp/constract_llm/tokenizer/: add_tokens.py  merge_spm.py  train_tokenizer.py
src/project/: main.py
src/project/common/utils/: async_utils.py
tests/nlp/: test_env.py
tests/nlp/common/utils/: test_async_utils.py  test_cli_utils.py  test_import_utils.py  test_regex_utils.py
tests/nlp/common/utils/file/: test_config.py  test_factory.py  test_io.py  test_json.py  test_toml.py  test_xml.py  test_yaml.py
tests/nlp/constract_llm/dataset/: test_loader.py
tests/nlp/constract_llm/dataset/cleanse/: test_di.py  test_text.py
tests/nlp/constract_llm/dataset/preprocess/: test_preprocess.py
tests/nlp/constract_llm/dataset/split/: test_di.py  test_strategy.py
tests/nlp/constract_llm/model/: test_di.py  test_hard_negative_miner.py  test_model_factory.py
tests/nlp/constract_llm/tokenizer/: add_tokens.py
