[project]
name = "nlp"
version = "0.1.0"
description = ""
authors = [{ name = "Tatsuki Okada", email = "tatsukio0522@gmali.com" }]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "setuptools>=80.9.0",
    "fire>=0.7.1",
    "pydantic>=2.12.4",
    "beautifulsoup4>=4.14.0",
    "selenium>=4.38.0",
    "playwright>=1.56.0",
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    "polars>=1.35.2",
    "pandas>=2.3.3",
    "openpyxl>=3.1.2",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "japanize-matplotlib>=1.1.3",
    "matplotlib-fontja>=1.1.0",
    "numpy>=2.3.4",
    "tqdm>=4.67.1",
    "scikit-learn>=1.7.2",
    "aiohttp>=3.9.5",
    "tenacity>=9.1.2",
    "toml>=0.10.2",
    "torch==2.8.0+cu128; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch==2.8.0; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
    "pytorch-lightning>=2.5.6",
    "transformers>=4.51.0",
    "sentence-transformers>=5.0.0",
    "accelerate>=1.11.0",
    "trl>=0.25.0",
    "datasets==3.6.0",
    "evaluate>=0.4.6",
    "hf-transfer>=0.1.9",
    "optimum>=1.13.2",
    "sentencepiece>=0.2.1",
    "protobuf>=3.20.1",
    "peft>=0.17.1",
    "spacy>=3.3.0",
    "litellm>=1.79.3",
    "langchain>=1.0.5",
    "google-adk>=1.18.0",
    "optuna>=4.5.0",
    "demoji>=1.1.0",
    "emoji>=1.7.0",
    "mojimoji>=0.0.12",
    "pillow>=12.0.0",
    "hatchling>=1.27.0",
    "editables>=0.5",
    "wheel>=0.45.1",
    "jsonlines>=4.0.0",
    "datasketch>=1.7.0",
    "gensim>=4.4.0",
    "bm25s>=0.2.14",
    "mecab-python3>=1.0.4",
    "sudachipy>=0.6.10",
    "sudachidict-core>=20250129",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nlp", "src"]

[tool.uv]
default-groups = ["dev"]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "torch-cpu", marker = "sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')" },
]


[tool.ruff]
line-length = 119
target-version = "py312"
exclude = [".git", ".venv", "__pycache__", "data", "dist", "misc", "notebooks", "prof", "tmp", "workspacea", ".tox"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select  = [
    "I", # isort
]
# ignores
ignore = ["E501"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

[tool.ruff.lint.pyupgrade]
# Python3.8互換のための設定
keep-runtime-typing = true

[tool.mypy]
python_version="3.12"
files = "src"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
allow_redefinition = true
show_error_codes = true
pretty = true
allow_untyped_globals = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning",]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "tensorboard>=2.20.0",
    "wandb>=0.23.0",
    "jupyterlab>=4.1.0",
    "marimo>=0.17.0",
    "tox>=4.30.0",
    "pytest>=9.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.4",
    "mypy>=1.18.0",
    "ty>=0.0.1a26",
    "nbstripout>=0.8.0",
    "pre-commit>=4.3.0",
    "types-pyyaml>=6.0.12.20250402",
    "types-toml>=0.10.8.20240310",
]
cuda = [
    "flash-attn>=2.7.3",
    "triton>=3.4.0",
    "deepspeed>=0.17.0",
]
