[tool.poetry]
name = "nlp_template"
version = "0.1.0"
description = ""
authors = ["iamtatsuki05 <tatsukio0522@gmail.com>"]
packages = [
    { include = "nlp_template", from = "../../src/" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
deepspeed = "^0.10.3"
transformers = "^4.33.2"
accelerate = "^0.23.0"
pytorch-lightning = "^2.0.9"
torchtext = "^0.15.2"
sentencepiece = "^0.1.99"
optimum = "^1.13.2"
spacy = "^3.6.1"
bitsandbytes = "^0.41.1"
tensorboard = "^2.14.0"
datasets = "^2.14.5"
scikit-learn = "^1.3.1"
evaluate = "^0.4.0"
mecab-python3 = "^1.0.8"
polars = "^0.19.3"
matplotlib = "^3.8.0"
japanize-matplotlib = "^1.1.3"
seaborn = "^0.12.2"
pandas = "^2.1.1"
torch = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
ipykernel = "^6.13.0"
autopep8 = "^1.6.0"
autoflake = "^1.4"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-quotes = "^3.3.1"
flake8-print = "^4.0.0"
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.971"
jupyterlab = "^4.0.6"
nbstripout = "^0.6.1"
pre-commit = "^3.4.0"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.black]
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
